proxy/envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address:
        address: 0.0.0.0
        port_value: 50000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          access_log:
          - name: envoy.access_loggers.stdout
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router
          route_config:
            virtual_hosts:
            - name: iuploader
              domains: "*"
              routes:
              - match:
                  prefix: "/back"
                route:
                  regex_rewrite:
                    pattern: { regex: "^/back/*" }
                    substitution: "/"
                  cluster: back_service
              - match:
                  prefix: "/"
                route:
                  cluster: front_service
  clusters:
  - name: front_service
    type: STRICT_DNS
    load_assignment:
      cluster_name: front_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: front, port_value: 3000 }
  - name: back_service
    type: STRICT_DNS
    load_assignment:
      cluster_name: back_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: back, port_value: 50000 }
